feat(chainable metadata provider) #24307 : Introducing the AWS S3 Storage Provider